fixation align-center logo

--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -144,7 +144,7 @@ h2{
 }
 .logo-container{
   display: flex;
-  // align-items: center;
+  align-items: center;
   justify-content: center;
   background-color: white;
   height: 100%;
